Supprime les points médians WIP

--- a/data/benefits/javascript/caf-ardennes-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-ardennes-aide-bafa-generale.yml
@@ -13,7 +13,7 @@ conditions_generales:
       - "08"
 profils: []
 conditions:
-  - Etre rattaché·e au régime général de la sécurité sociale.
+  - Etre rattaché au régime général de la sécurité sociale.
   - Engager votre formation avec un organisme ayant son siège ou une antenne
     dans les départements de la Marne, des Ardennes, de la Haute Marne, et de
     l'Aube.
