--- a/data/benefits/javascript/caf-charente-maritime-bafd.yml
+++ b/data/benefits/javascript/caf-charente-maritime-bafd.yml
@@ -16,7 +16,7 @@ conditions_generales:
     value: 18
 profils: []
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
   - Être titulaire du BAFA.
   - Effectuer votre stage auprès d’un <a target="_blank" title="Organisme
     Conventionné - Nouvelle fenêtre" rel="noopener"
