--- a/data/benefits/javascript/caf-correze-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-correze-aide-bafa-generale.yml
@@ -5,7 +5,7 @@ description: L'aide au BAFA pour une session de formation générale est une aid
   votre session en complément de l'aide
   nationale apportée par la CAF.
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de ses parents.
+  - Etre allocataire ou rattaché au dossier allocataire de ses parents.
   - >-
     Effectuer son stage auprès d’un
 
