--- a/data/benefits/javascript/caf-haute-marne-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-bafa-generale.yml
@@ -5,7 +5,7 @@ description: L'aide à la formation du BAFA est une aide locale mise à
   en complément de l'aide
   nationale apportée par la CAF.
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents au
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents au
     moment de la demande et de la réalisation du stage.
   - Etre inscrit au stage de formation générale.
 conditions_generales:
