--- a/data/benefits/javascript/caf-jura-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-jura-aide-bafa-approfondissement.yml
@@ -6,7 +6,7 @@ description: L'aide à la formation du BAFA est une aide locale mise à
   nationale apportée par la CAF.
 prefix: l’
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
 conditions_generales:
   - type: age
     operator: ">="
