--- a/data/benefits/javascript/caf-orne-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-orne-aide-bafa-generale.yml
@@ -16,7 +16,7 @@ conditions_generales:
       - "61"
 profils: []
 conditions:
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
 interestFlag: _interetBafa
 type: float
 unit: €
