--- a/data/benefits/javascript/caf-seine-maritime-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-seine-maritime-aide-bafa-approfondissement.yml
@@ -18,7 +18,7 @@ conditions_generales:
     operator: "<="
 profils: []
 conditions:
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Effectuer votre stage pratique auprès d'un organisme habilité par la
     Direction départementale de la cohésion sociale, dans un délai de 18 mois
     après le stage de base.
