--- a/data/benefits/javascript/caf-vaucluse-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-vaucluse-aide-bafa-generale.yml
@@ -5,7 +5,7 @@ description: L'aide à la formation du BAFA est une aide locale mise à
   complément de l'aide
   nationale apportée par la CAF.
 conditions:
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Être sans emploi fixe rémunéré.
   - Suivre votre stage dans un organisme de formation domicilié en PACA.
 conditions_generales:
