--- a/data/benefits/javascript/caf_pas_de_calais-aide-au-bafa-pour-une-session-de-formation-générale.yml
+++ b/data/benefits/javascript/caf_pas_de_calais-aide-au-bafa-pour-une-session-de-formation-générale.yml
@@ -21,7 +21,7 @@ conditions_generales:
 profils: []
 conditions:
   - Effectuer votre formation en externat et en demi-pension.
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Contacter votre CAF sur l'<a target="_blank" title="espace en ligne -
     Nouvelle fenêtre" rel="noopener"
     href="https://connect.caf.fr/connexionappli/dist/?forceReload=20211220&contexteAppel=caffr&urlredirect=%2Fwps%2Fmyportal%2Fcaffr%2Fmoncompte%2Fcontactermacaf#/login">espace
