--- a/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
@@ -4,7 +4,7 @@ description: Grâce à l'aide au permis de conduire de la région, bénéficiez 
   financement d'une partie de votre permis B.
 conditions:
   - Être inscrit ou inscrite dans une autoécole bourguignonne-franc-comtoise.
-  - Être rattaché·e au foyer fiscal parental (conditions de ressources
+  - Être rattaché au foyer fiscal parental (conditions de ressources
     financières) ou émancipé·e fiscalement (sans conditions).
   - Être engagé·e dans un parcours de formation (niveau IV ou inférieur) ou
     demandeur d’emploi (sous conditions) ou en mission de Service civique ou
