--- a/data/benefits/javascript/caf-ardennes-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-ardennes-aide-bafa-approfondissement.yml
@@ -14,7 +14,7 @@ conditions_generales:
       - "08"
 profils: []
 conditions:
-  - Etre rattaché·e au régime général de la Sécurité Sociale.
+  - Etre rattaché au régime général de la Sécurité Sociale.
   - Engager votre formation avec un organisme ayant son siège ou une antenne
     dans les départements de la Marne, des Ardennes, de la Haute Marne, et de
     l'Aube.
