--- a/data/benefits/javascript/caf-charente-maritime-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-charente-maritime-aide-bafa-generale.yml
@@ -20,7 +20,7 @@ conditions_generales:
     operator: "<="
 profils: []
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
   - Effectuer la session de formation auprès d’un <a target="_blank"
     rel="noopener" title="Voir les établissements conventionnés - Nouvelle
     fenêtre"
