--- a/data/benefits/javascript/caf-haute-saone-aide-bafa.yml
+++ b/data/benefits/javascript/caf-haute-saone-aide-bafa.yml
@@ -16,7 +16,7 @@ conditions_generales:
       - "70"
 profils: []
 conditions:
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Contacter votre CAF pour faire votre demande.
 interestFlag: _interetBafa
 type: float
