--- a/data/benefits/javascript/caf-haute-vienne-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-haute-vienne-aide-bafa-generale.yml
@@ -20,7 +20,7 @@ conditions_generales:
     operator: "<="
 profils: []
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
   - Ne pas être pris·e en charge à 100 % par un·e employeur·euse.
   - Contacter directement <a target="_blank" title="Organismes de formation -
     Nouvelle fenêtre" rel="noopener"
