--- a/data/benefits/javascript/caf-loir-et-cher-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-loir-et-cher-aide-bafa-generale.yml
@@ -20,7 +20,7 @@ conditions_generales:
     operator: "<="
 profils: []
 conditions:
-  - Etre allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Etre allocataire ou rattaché au dossier allocataire de vos parents.
 interestFlag: _interetBafa
 type: float
 unit: €
