--- a/data/benefits/javascript/caf-tarn-et-garonne-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-tarn-et-garonne-aide-bafa-approfondissement.yml
@@ -7,7 +7,7 @@ description: L'aide à la formation du BAFA est une aide locale mise à
 conditions:
   - Être considéré·e à charge de vos parents ou être placé·e par décision
     judiciaire sous l'autorité des services de l'Etat.
-  - Être allocataire ou rattaché·e au dossier allocataire de vos parents.
+  - Être allocataire ou rattaché au dossier allocataire de vos parents.
 conditions_generales:
   - type: age
     operator: ">="
