Supprime les points médians WIP

--- a/data/benefits/javascript/region_normandie-pass-monde-volontariat.yml
+++ b/data/benefits/javascript/region_normandie-pass-monde-volontariat.yml
@@ -2,7 +2,7 @@ label: Pass Monde Volontariat
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: "La Région Normandie accompagne les jeunes normand·e·s âgé·e·s de
-  15 à 30 ans engagé·e·s dans une mobilité internationale avec l’Office
+  15 à 30 ans engagés ou engagées dans une mobilité internationale avec l’Office
   Franco-Allemand pour la Jeunesse ou l’Office Franco-Québécois pour la Jeunesse
   ou l’un des volontariats suivants : le Service Volontaire Européen/Corps
   Européen de Solidarité, le Service Civique International, le Volontariat de
