--- a/data/benefits/javascript/grand-est-experiences-de-jeunesse.yml
+++ b/data/benefits/javascript/grand-est-experiences-de-jeunesse.yml
@@ -1,7 +1,7 @@
 label: expériences de Jeunesse
 institution: grand_est
 description: La Région accompagne les jeunes du Grand Est de 15 à 29 ans
-  engagé·e·s sur un projet d’engagement citoyen ou porteurs d’un projet
+  engagés ou engagées sur un projet d’engagement citoyen ou porteurs d’un projet
   professionnalisant.
 prefix: l’aide
 conditions_generales:
