Supprime les points médians WIP

--- a/data/benefits/javascript/grand-est-bourse-du-secteur-sanitaire-et-social.yml
+++ b/data/benefits/javascript/grand-est-bourse-du-secteur-sanitaire-et-social.yml
@@ -1,7 +1,7 @@
 label: bourse du secteur sanitaire et social
 institution: grand_est
 description: La Région Grand Est peut octroyer des bourses d’études à caractère
-  social aux étudiants ou étudiantes inscrit ou inscrite·s dans les formations du secteur sanitaire
+  social aux étudiants ou étudiantes inscrit ou inscrites dans les formations du secteur sanitaire
   et social agréées et financées par la Région Grand Est.
 prefix: la
 conditions_generales:
