--- a/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
@@ -7,7 +7,7 @@ description:
   jusqu'à 100 repas sur l'année universitaire.
 conditions:
   - Être étudiant·e inscrit ou inscrite dans un établissement d'enseignement supérieur,
-    public ou privé, partenaire de la Région, ou inscrit ou inscrite·s dans un
+    public ou privé, partenaire de la Région, ou inscrit ou inscrites dans un
     établissement dispensant une formation sanitaire ou sociale géré par la
     Région.
   - Être boursiers du CROUS ou de la Région Hauts-de-France, à l'un des échelons
