--- a/data/benefits/javascript/occitanie-bourse-etudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/occitanie-bourse-etudes-sanitaires-et-sociales.yml
@@ -1,7 +1,7 @@
 label: bourse d’Etudes Sanitaires et Sociales
 institution: region_occitanie
 description:
-  Cette bourse est destinée aux élèves et étudiants ou étudiantes inscrit ou inscrite·s en
+  Cette bourse est destinée aux élèves et étudiants ou étudiantes inscrit ou inscrites en
   formations paramédicales, de sages-femmes ou en travail social dans un centre
   de formation agréé par la Région Occitanie/Pyrénées-Méditerranée.
 conditions:
