--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -3,7 +3,7 @@ label:
   social
 institution: region_provence_alpes_cote_azur
 description: Il s’agit d’une aide financière destinée à améliorer les conditions
-  de vie des élèves et étudiants ou étudiantes inscrit ou inscrite·s dans une filière sanitaire ou du
+  de vie des élèves et étudiants ou étudiantes inscrit ou inscrites dans une filière sanitaire ou du
   travail social en Région Provence-Alpes-Côte d'Azur.
 conditions:
   - Être stagiaire de la formation professionnelle inscrit ou inscrite en formation
