--- a/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
@@ -1,7 +1,7 @@
 label: aide Régionale à l’Apprentissage (ARA)
 institution: region_ile_de_france
 description: L’Aide Régionale à l’Apprentissage (ARA) a pour objectif de
-  soutenir les apprentis ou apprenties inscrit ou inscrite·s en formation de premiers niveaux (3, 4
+  soutenir les apprentis ou apprenties inscrit ou inscrites en formation de premiers niveaux (3, 4
   et 5) en les aidant à faire face à des dépenses liées à l’achat de livres,
   d’équipement et de documentation professionnelle, de frais de transport, de
   restauration ou d’hébergement, etc.
