--- a/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
+++ b/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
@@ -2,7 +2,7 @@ label: pass Monde Etudes secondaires
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: L’aide Pass Monde accompagne la mobilité individuelle des
-  normand·e·s inscrit ou inscrite·s dans un cursus d’étude du secondaire en formation
+  normand·e·s inscrit ou inscrites dans un cursus d’étude du secondaire en formation
   initiale ou continue (lycéens ou lycéennes, apprentis ou apprenties, jeunes en contrats de
   professionnalisation et stagiaires de la formation professionnelle).
 conditions:
