--- a/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
+++ b/data/benefits/javascript/region-occitanie-financement-formations-sanitaires-sociales-niveaux-v-iv.yml
@@ -1,7 +1,7 @@
 label: financement des formations sanitaires et sociales de niveaux V et IV
 institution: region_occitanie
 description: La Région Occitanie finance gratuitement les formations sanitaires
-  et sociales de niveaux V et IV pour les élèves inscrit ou inscrite·s en formation
+  et sociales de niveaux V et IV pour les élèves inscrit ou inscrites en formation
   d'aide-soignant·e, auxiliaire de puériculture, ambulancier·e,
   accompagnant·e éducatif·ve et social·e, moniteur·rice éducateur·rice ou
   technicien·ne en intervention sociale et familiale.
