--- a/data/benefits/javascript/region-bourgogne-franche-comte-etudes-etranger-aquisis.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-etudes-etranger-aquisis.yml
@@ -4,7 +4,7 @@ description: Cette bourse vous permet d’effectuer des périodes d’études da
   monde entier (sauf France métropolitaine et DROM-COM), afin d’acquérir des
   compétences nouvelles et de vous perfectionner en langues étrangères.
 conditions:
-  - Être inscrit ou inscrite·s dans un établissement d’enseignement supérieur de
+  - Être inscrit ou inscrites dans un établissement d’enseignement supérieur de
     Bourgogne-Franche-Comté.
   - Avoir une période d’études à réaliser à l’étranger dans le cadre de votre
     cursus de formation.
