--- a/data/benefits/javascript/region-nouvelle-aquitaine-aide-à-la-restauration-des-lycéen·ne·s.yml
+++ b/data/benefits/javascript/region-nouvelle-aquitaine-aide-à-la-restauration-des-lycéen·ne·s.yml
@@ -1,7 +1,7 @@
 label: aide à la restauration des lycéens ou lycéennes
 institution: region_nouvelle_aquitaine
 description: La Région propose un tarif réduit pour la restauration des
-  lycéens ou lycéennes demi-pensionnaires ou internes inscrit ou inscrite·s dans un lycée public ou
+  lycéens ou lycéennes demi-pensionnaires ou internes inscrit ou inscrites dans un lycée public ou
   EREA.
 prefix: l’
 conditions_generales:
