--- a/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
@@ -1,4 +1,4 @@
-label: bourses pour les élèves et étudiants ou étudiantes inscrit ou inscrite·s en formations
+label: bourses pour les élèves et étudiants ou étudiantes inscrit ou inscrites en formations
   sanitaires et sociales
 institution: region_ile_de_france
 description: La Région Ile-de-France verse, sous conditions de ressources, une
