Supprime les points médians WIP + fix lint

--- a/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
@@ -1,4 +1,5 @@
-label: aide à la restauration des étudiants ou étudiantes boursier·e·s en filière sanitaire
+label:
+  aide à la restauration des étudiants ou étudiantes boursier·e·s en filière sanitaire
   et sociale
 institution: hauts_de_france
 description: Cette aide vise à offrir la gratuité des repas dans les restaurants
