--- a/data/benefits/javascript/region_pays_de_la_loire-bourses-pour-les-élèves-et-étudiant-e-s-en-formation-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/region_pays_de_la_loire-bourses-pour-les-élèves-et-étudiant-e-s-en-formation-sanitaire-et-sociale.yml
@@ -1,6 +1,7 @@
 label: bourses pour les élèves et étudiants ou étudiantes en formation sanitaire et sociale
 institution: region_pays_de_la_loire
-description: La Région finance des bourses pour les élèves et étudiants ou étudiantes dont
+description:
+  La Région finance des bourses pour les élèves et étudiants ou étudiantes dont
   les revenus familiaux ou personnels sont reconnus insuffisants au regard de
   leurs charges.
 conditions:
