Supprime les points médians WIP

--- a/data/benefits/javascript/grand-est-experiences-de-jeunesse.yml
+++ b/data/benefits/javascript/grand-est-experiences-de-jeunesse.yml
@@ -16,7 +16,7 @@ conditions_generales:
       - "44"
 profils: []
 conditions:
-  - Être porteur/porteuse de projets favorisant l’engagement citoyen, seul·e ou
+  - Être porteur ou porteuse de projets favorisant l’engagement citoyen, solitaire ou
     en groupe, ou bien avoir un projet faisant apparaître un projet
     professionnel clair, nécessitant un soutien.
   - Remplir le dossier de candidature <a target="_blank" rel="noopener" title
