--- a/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
+++ b/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
@@ -1,12 +1,12 @@
-label: aide au Transport aux Particuliers - Salarié·e·s
+label: aide au Transport aux Particuliers - Salariés ou salariées
 institution: hauts_de_france
 description: Cette aide permet la prise en charge d'une partie des frais liés au
-  trajet domicile-travail pour les salarié·e·s qui utilisent leur véhicule pour
+  trajet domicile-travail pour les salariés ou salariées qui utilisent leur véhicule pour
   aller travailler.
 conditions:
   - Utiliser un véhicule particulier ou un deux-roues motorisé pour la majorité
     de vos déplacements quotidiens domicile - travail.
-  - Etre salarié·e en CDI ou en CDD d'au moins un mois.
+  - Etre salarié ou salariée en CDI ou en CDD d'au moins un mois.
   - Avoir une distance routière entre le domicile et le lieu de travail
     supérieure ou égale à 20 kilomètres (1 trajet).
   - Percevoir un salaire net inférieur ou égal à 2 fois le SMIC.
