--- a/data/benefits/javascript/region-pays-de-la-loire-abonnement-tutti-26-illimite.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-abonnement-tutti-26-illimite.yml
@@ -2,7 +2,7 @@ label: abonnement Tutti -26 ans illimité
 institution: region_pays_de_la_loire
 description: L'Abonnement Tutti -26 illimité permet la libre circulation sur
   votre parcours habituel, en train ou en autocar régional dans les Pays de la
-  Loire. Il s'adresse à toutes et tous (salarié·e·s, étudiants ou étudiantes,
+  Loire. Il s'adresse à toutes et tous (salariés ou salariées, étudiants ou étudiantes,
   stagiaires...) pour simplifier vos déplacements quotidiens.
 prefix: l’
 conditions_generales:
