--- a/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
@@ -9,7 +9,7 @@ description: Cette aide vise à favoriser la mobilité internationale des élèv
 conditions:
   - Être inscrit ou inscrite dans un institut de formations sanitaires ou sociales agréé
     par la Région Grand Est (hors IBODE, IADE et Cadre de santé).
-  - Ne pas être salarié·e (promotion professionnelle CIF, apprentis).
+  - Ne pas être salarié ou salariée (promotion professionnelle CIF, apprentis).
   - Souhaiter effectuer une période d’études ou de stage d’une durée minimale de
     5 semaines dans un même organisme à l’étranger.
 conditions_generales:
