--- a/data/benefits/javascript/region-bourgogne-franche-comte-stages-monde.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-stages-monde.yml
@@ -1,4 +1,4 @@
-label: stages Monde - Jeunes diplômé·e·s et en recherche d'emploi
+label: stages Monde - Jeunes titulaires d'un diplôme et en recherche d'emploi
 institution: region_bourgogne_franche_comte
 description: Cette aide vous permet de financer une expérience professionnelle à
   l’étranger sous la forme d'une bourse, et d'être accompagné·e dans votre
