Supprime les points médians WIP

--- a/data/benefits/javascript/guadeloupe-aide-au-permis-de-conduire-des-apprenti-e-s.yml
+++ b/data/benefits/javascript/guadeloupe-aide-au-permis-de-conduire-des-apprenti-e-s.yml
@@ -7,7 +7,7 @@ description:
   href="https://travail-emploi.gouv.fr/formation-professionnelle/formation-en-alternance-10751/apprentissage/apprentis-aide-permis">l'aide
   de l'Etat</a>.
 conditions:
-  - Être admis·e à vos examens de fin de cycle de formation.
+  - Obtenir la validation de vos examens de fin de cycle de formation.
 conditions_generales:
   - type: regions
     values:
