Supprime les points médians WIP

--- a/data/benefits/javascript/guadeloupe-pret-etudiant·e-taux-zero.yml
+++ b/data/benefits/javascript/guadeloupe-pret-etudiant·e-taux-zero.yml
@@ -1,4 +1,4 @@
-label: prêt étudiant·e à taux zéro
+label: prêt étudiant à taux zéro
 institution: guadeloupe
 description: La Région vous propose de prendre en charge les intérêts de votre
   prêt d'un montant maximum de 15 000€.
