--- a/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-restauration-etudiants-boursiers.yml
@@ -1,16 +1,15 @@
 label: aide régionale à la restauration des étudiants boursiers
 institution: hauts_de_france
 description:
-  Cette aide permet d'offrir la gratuité des repas aux étudiants ou étudiantes
-  dans les restaurants universitaires pour équilibrer l'alimentation des
-  étudiants ou étudiantes, à raison d'un repas par service, au déjeuner et/ou au dîner,
-  jusqu'à 100 repas sur l'année universitaire.
+  Cette aide permet d’offrir la gratuité des repas aux étudiants ou étudiantes
+  dans les restaurants universitaires pour équilibrer l’alimentation des
+  étudiants ou étudiantes, à raison d’un repas par service, au déjeuner et/ou au dîner,
+  jusqu’à 100 repas sur l’année universitaire.
 conditions:
-  - Être étudiant·e inscrit ou inscrite dans un établissement d'enseignement supérieur,
-    public ou privé, partenaire de la Région, ou inscrit ou inscrites dans un
-    établissement dispensant une formation sanitaire ou sociale géré par la
-    Région.
-  - Être boursiers du CROUS ou de la Région Hauts-de-France, à l'un des échelons
+  - Être inscrit ou inscrite pour étudier dans un établissement d’enseignement supérieur,
+    public ou privé, partenaire de la Région, ou dans un établissement dispensant une formation
+    sanitaire ou sociale géré par la Région.
+  - Avoir droit à la bourse du CROUS ou de la Région Hauts-de-France, à l’un des échelons
     de bourse 4, 5, 6, 7 ou bien signalés par le service social du CROUS.
 conditions_generales:
   - type: age
