--- a/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
@@ -5,8 +5,7 @@ description: La Collectivité Territoriale de Martinique verse des bourses aux
   ou de sage-femme dans les établissements agréés dispensant des formations
   sociales et sanitaires en Martinique.
 conditions:
-  - Être de nationalité française ou ressortissant ou ressortissante d’un pays de l’Union
-    Européenne.
+  - Être de nationalité française ou d’un pays de l’Union Européenne.
   - Remplir les <a target="_blank" rel="noopener" title ="Critères d'éligibilité - Nouvelle fenêtre"
     href="https://www.collectivitedemartinique.mq/wp-content/uploads/2021/07/Pr_Broch_a5_Espace-Etudiants_Form-Sanitaires_2107.pdf">critères
     d'éligibilité</a>.
