--- a/data/benefits/javascript/martinique-fonds-aide-jeunes.yml
+++ b/data/benefits/javascript/martinique-fonds-aide-jeunes.yml
@@ -6,7 +6,7 @@ description: Il s'agit d'un dispositif destiné à prévenir les risques
   secours exceptionnels, hébergement, aides à la formation, l'emploi et la
   mobilité, dont une aide à l'obtention du permis B).
 conditions:
-  - Être français·e ou étranger·e·s en situation de séjour régulier en France.
+  - Être de nationalité française ou étrangère en situation de séjour régulier en France.
   - Être sans revenus ou avec de faibles ressources.
   - Constituer un dossier auprès d'une Mission Locale ou d'une circonscription
     d’Action Sociale.
