Supprime les points médians WIP

--- a/data/benefits/javascript/hauts-de-france-bourse-mobilite-mermoz.yml
+++ b/data/benefits/javascript/hauts-de-france-bourse-mobilite-mermoz.yml
@@ -7,7 +7,7 @@ description: La Région Hauts-de-France a mis en place ce dispositif afin d'aide
 conditions:
   - vérifier que vous correspondez aux <a target="_blank" rel="noopener" title ="Conditions spécifiques - Nouvelle fenêtre"
     href="https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=929">conditions
-    spécifiques</a> à chaque situation (étudiant·e, stagiaire, en séjour de
+    spécifiques</a> à chaque situation (étudiant ou étudiante, stagiaire, en séjour de
     recherche).
   - présenter votre projet de mobilité au service de Relations Internationales
     ou au service « Stage » de votre établissement avant de déposer votre
