--- a/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
@@ -5,7 +5,7 @@ description:
   souhaitent effectuer un stage professionnel ou un séjour d’études à
   l’étranger.
 conditions:
-  - Être étudiant·e en BTS ou BUT.
+  - Être étudiant ou étudiante en BTS ou BUT.
   - Vérifier que vous correspondez aux <a target="_blank" rel="noopener" title ="conditions spécifiques - Nouvelle fenêtre"
     href="https://www.bretagne.bzh/aides/fiches/bourse-jeunes-a-linternational-etudiants-en-bts-et-dut/">conditions
     spécifiques</a> d'attribution (section "Bénéficiaires et critères").
