--- a/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
@@ -3,7 +3,7 @@ imgSrc: ""
 institution: region_ile_de_france
 description:
   La Région Ile-de-France apporte aux étudiants ou étudiantes résidant en Île-de-France
-  inscrit ou inscrites en BUT, licence ou master dans un établissement francilien
+  inscrits ou inscrites en BUT, licence ou master dans un établissement francilien
   partenaire une aide financière pour réaliser un stage ou une période d'études
   à l'étranger, d'une durée de 1 à 10 mois maximum, durant l'année
   universitaire.
