--- a/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
+++ b/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
@@ -2,7 +2,7 @@ label: pass Monde Etudes supérieures
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: La Région Normandie accompagne les jeunes normand·e·s âgé·e·s de 15
-  à 30 ans inscrit ou inscrites dans un cursus d’études supérieures en formation initiale
+  à 30 ans inscrits ou inscrites dans un cursus d’études supérieures en formation initiale
   ou continue de niveau III, II et I  et effectuant une mobilité internationale
   individuelle (stage en milieu professionnel, séjour d'études en établissement
   étranger, mission d'étude et d'enquête sur le terrain).
