--- a/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
@@ -1,9 +1,9 @@
 label:
-  aide à la restauration des étudiants ou étudiantes boursier·e·s en filière sanitaire
+  aide à la restauration des étudiants ou étudiantes ayants droit à une bourse en filière sanitaire
   et sociale
 institution: hauts_de_france
 description: Cette aide vise à offrir la gratuité des repas dans les restaurants
-  universitaires aux étudiants ou étudiantes boursier·e·s en filière sanitaire et sociale
+  universitaires aux étudiants ou étudiantes ayants droit à une bourse en filière sanitaire et sociale
   (3,30 € par repas dans la limite de 100 repas sur l'année scolaire).
 conditions:
   - Être inscrit ou inscrite dans un établissement d'enseignement supérieur partenaire de
