Supprime les points médians WIP

--- a/data/benefits/javascript/region_normandie-aide-à-laccès-au-permis-de-conduire-permis-b.yml
+++ b/data/benefits/javascript/region_normandie-aide-à-laccès-au-permis-de-conduire-permis-b.yml
@@ -1,7 +1,7 @@
 label: aide à l'accès au permis de conduire - Permis B
 institution: region_normandie
 description: La Région Normandie apporte une aide spécifique au financement du
-  permis de conduire pour certain·e·s stagiaires en ciblant les métiers pour
+  permis de conduire pour les stagiaires en ciblant les métiers pour
   lesquels l'obtention du permis de conduire est une condition presque absolue
   pour l'insertion durable dans l'emploi.
 conditions:
