--- a/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-equipement.yml
+++ b/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-equipement.yml
@@ -6,7 +6,7 @@ description: Grâce à la carte Génération - Apprentis, vous pouvez bénéfici
   équipements professionnels et de sécurité en lien avec la certification
   préparée.
 conditions:
-  - Être primo-entrant·e à l'apprentissage.
+  - Être dans la première année de sa formation d'apprentissage.
 conditions_generales:
   - type: regions
     values:
