Supprime les points médians WIP

--- a/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-restauration.yml
+++ b/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-restauration.yml
@@ -8,7 +8,7 @@ conditions:
     des Hauts de France.
   - OU être inscrit ou inscrite dans un CFA ou un organisme de formation hors région
     Hauts-de-France si l'offre de formation n'existe pas régionalement et que
-    vous êtes employé·e par une entreprise du territoire des Hauts-de-France,
+    vous êtes employé ou employée par une entreprise du territoire des Hauts-de-France,
     sous réserve que vous ne perceviez pas d'aide d'une autre Région.
 conditions_generales:
   - type: regions
