--- a/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
+++ b/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
@@ -12,7 +12,7 @@ conditions:
     rel="noopener"href="https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=667">formations
     éligibles</a> à la Bourse d'Etudes Sanitaires et Sociales (BESS).
   - Rencontrer des difficultés financières.
-  - Faire valider votre dossier par par un·e travailleur/euse social·e
+  - Faire valider votre dossier par par une personne travailleuse sociale
     habilité·e (Conseil Départemental, Mission Locale, Etablissement, CROUS…).
 conditions_generales:
   - type: regions
