--- a/data/benefits/javascript/region-auvergne-rhone-alpes-formation-sante-sociale.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-formation-sante-sociale.yml
@@ -4,7 +4,7 @@ description: Cette aide vous permet d'éviter d'avoir à interrompre votre
   parcours de formation suite à une situation d'urgence (maladie, décès,
   chômage, divorce, etc.).
 conditions:
-  - Rencontrer un·e travailleur·euse social·e.
+  - Rencontrer une personne travailleuse sociale.
 conditions_generales:
   - type: formation_sanitaire_social
   - type: regions
