--- a/data/benefits/openfisca/mobili_jeune.yml
+++ b/data/benefits/openfisca/mobili_jeune.yml
@@ -4,7 +4,7 @@ description: L’aide MOBILI-JEUNE® s’adresse aux jeunes de moins de 30 ans, 
   formation en alternance. Elle permet de prendre en charge une partie du loyer
   (entre 10 € et 100 € maximum) chaque mois et pendant un an.
 conditions:
-  - Ne pas être employé·e par une entreprise publique.
+  - Ne pas être employé ou employée par une entreprise publique.
 link: https://www.actionlogement.fr/l-aide-mobili-jeune?utm_source=mes-aides-jeunes&utm_medium=resultats
 teleservice: https://mobilijeune.actionlogement.fr
 prefix: l’aide
