--- a/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
+++ b/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
@@ -13,7 +13,7 @@ conditions:
     éligibles</a> à la Bourse d'Etudes Sanitaires et Sociales (BESS).
   - Rencontrer des difficultés financières.
   - Faire valider votre dossier par par une personne travailleuse sociale
-    habilité·e (Conseil Départemental, Mission Locale, Etablissement, CROUS…).
+    habilitée (Conseil Départemental, Mission Locale, Etablissement, CROUS…).
 conditions_generales:
   - type: regions
     values:
